--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.14.5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
